[package]
name = "heartseeker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17.0", features = ["full"] }
bytes = "1"
clap = "2.33"
chrono = "0.4"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
sha-1 = "0.10.0"
base64 = "0.13.0"
